--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-							<a href="img_mine/thumbnail02.png" class="media-1 glightbox">
-								<img src="img_mine/thumbnail02.png" alt="Image" class="img-fluid">
+							<a href="images/img_v_1-min.jpg" class="media-1 glightbox">
+								<img src="images/img_v_1-min.jpg" alt="Image" class="img-fluid">
 								<div class="media-1-content">
 									<h2>BOOK Animation</h2>
 									<span class="category">advertisement </span>
@@ -145,8 +145,8 @@
 							</a>
 						</div>
 						<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
-							<a href="img_mine/thumbnail02.png" class="media-1 glightbox">
-								<img src="img_mine/thumbnail02.png" alt="Image" class="img-fluid">
+							<a href="images/img_v_2-min.jpg" class="media-1 glightbox">
+								<img src="images/img_v_2-min.jpg" alt="Image" class="img-fluid">
 								<div class="media-1-content">
 									<h2>Festival Poster Design</h2>
 									<span class="category">Promotion</span>
@@ -154,8 +154,8 @@
 							</a>
 						</div>
 						<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="400">
-							<a href="img_mine/thumbnail02.png" class="media-1 glightbox">
-								<img src="img_mine/thumbnail02.png" alt="Image" class="img-fluid">
+							<a href="images/img_v_3-min.jpg" class="media-1 glightbox">
+								<img src="images/img_v_3-min.jpg" alt="Image" class="img-fluid">
 								<div class="media-1-content">
 									<h2>Fruits</h2>
 									<span class="category">Website</span>
@@ -164,8 +164,8 @@
 						</div>
 
 						<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-							<a href="img_mine/thumbnail02.png" class="media-1 glightbox">
-								<img src="img_mine/thumbnail02.png" alt="Image" class="img-fluid">
+							<a href="images/img_v_4-min.jpg" class="media-1 glightbox">
+								<img src="images/img_v_4-min.jpg" alt="Image" class="img-fluid">
 								<div class="media-1-content">
 									<h2>Design Material</h2>
 									<span class="category">Web Application</span>
@@ -173,8 +173,8 @@
 							</a>
 						</div>
 						<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-							<a href="img_mine/thumbnail02.png" class="media-1 glightbox">
-								<img src="img_mine/thumbnail02.png" alt="Image" class="img-fluid">
+							<a href="images/img_v_5-min.jpg" class="media-1 glightbox">
+								<img src="images/img_v_5-min.jpg" alt="Image" class="img-fluid">
 								<div class="media-1-content">
 									<h2>Handy Food</h2>
 									<span class="category">Branding</span>
@@ -182,8 +182,8 @@
 							</a>
 						</div>
 						<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
-							<a href="img_mine/thumbnail02.png" class="media-1 glightbox">
-								<img src="img_mine/thumbnail02.png" alt="Image" class="img-fluid">
+							<a href="images/img_v_6-min.jpg" class="media-1 glightbox">
+								<img src="images/img_v_6-min.jpg" alt="Image" class="img-fluid">
 								<div class="media-1-content">
 									<h2>Cat With Cup</h2>
 									<span class="category">Website</span>
