--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 	<!---<div class="hero v-h-full overlay" id="home">
 		<div class="img-bg rellax">
-			<img src="img_mine/test3.jpg" alt="Image" class="img-fluid">
+			<img src="img_mine/img_mine/test3.jpg" alt="Image" class="img-fluid">
 		</div>
 		<div class="container">
 			<div class="row align-items-center v-h-full">
