--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                 <img src="img_mine/plus.png" alt="">
                             </div>
                         </div>
-                        <img src="img_mine/c-kimjoori.png" alt="Image" class="img-fluid">
+                        <img src="img_mine/img_mine/c-kimjoori.png" alt="Image" class="img-fluid">
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Cinema _1</div>
