--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <img src="img_mine/plus.png" alt="">
+                                <img src="img_mine/img_mine/plus.png" alt="">
                             </div>
                         </div>
                         <img src="img_mine/img_mine/c-kimjoori.png" alt="Image" class="img-fluid">
@@ -304,7 +304,7 @@
                                 <img src="img_mine/plus.png" alt="">
                             </div>
                         </div>
-                        <img src="img_mine/cook.png" alt="Image" class="img-fluid">
+                        <img src="img_mine/img_mine/cook.png" alt="Image" class="img-fluid">
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Cook V-LOG</div>
