--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 	<!---<div class="hero v-h-full overlay" id="home">
 		<div class="img-bg rellax">
-			<img src="img_mine/img_mine/test3.jpg" alt="Image" class="img-fluid">
+			<img src="img_mine/test3.jpg" alt="Image" class="img-fluid">
 		</div>
 		<div class="container">
 			<div class="row align-items-center v-h-full">
@@ -184,10 +184,10 @@
                     <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <img src="img_mine/img_mine/plus.png" alt="">
+                                <img src="img_mine/plus.png" alt="">
                             </div>
                         </div>
-                        <img src="img_mine/img_mine/c-kimjoori.png" alt="Image" class="img-fluid">
+                        <img src="img_mine/c-kimjoori.png" alt="Image" class="img-fluid">
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Cinema _1</div>
@@ -304,7 +304,7 @@
                                 <img src="img_mine/plus.png" alt="">
                             </div>
                         </div>
-                        <img src="img_mine/img_mine/cook.png" alt="Image" class="img-fluid">
+                        <img src="img_mine/cook.png" alt="Image" class="img-fluid">
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Cook V-LOG</div>
