--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                 <img src="img_mine/plus.png" alt="">
                             </div>
                         </div>
-                        <img src="img_mine/tamburins.png" alt="Image" class="img-fluid">
+                        <img src="img_mine/tamburins2.png" alt="Image" class="img-fluid">
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Brand 'TAMBURINS'</div>
@@ -372,7 +372,7 @@
                                 <img src="img_mine/plus.png" alt="">
                             </div>
                         </div>
-                        <img src="img_mine/thumbnail04.png" alt="Image" class="img-fluid">
+                        <img src="img_mine/aereels.png" alt="Image" class="img-fluid">
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">AE reels</div>
@@ -614,9 +614,9 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-case">Cinema</h2>
+                                    <h2 class="text-case">Cinema _1</h2>
                                     <p class="item-intro text-muted">Premier pro</p>
-									<a href="https://youtu.be/QJuvbPeOVBY"><img class="img-fluid d-block mx-auto" src="img_mine/c-kimjoori_button.jpg" alt="..." /></a>
+									<a href="https://youtu.be/mm5RZeUa9bU"><img class="img-fluid d-block mx-auto" src="img_mine/c-kimjoori_button.jpg" alt="..." /></a>
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
 										<br><br> 서울 여의도 - 트럼프월드를 촬영한 현장입니다. <br>
 										공간을 편안한 무드로 영화처럼 이어서 볼 수 있도록 <br> 
@@ -664,7 +664,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-case">Script cinema _1</h2>
                                     <p class="item-intro text-muted">Premier pro</p>
-                                    <a href="https://drive.google.com/file/d/1IgCBE8hhluAjPugoGovNEoJXeKVpjooS/view?usp=drive_link"><img class="img-fluid d-block mx-auto" src="img_mine/sc-1_button.jpg" alt="..." /></a>
+                                    <a href="https://youtu.be/OZt79KDr-2I"><img class="img-fluid d-block mx-auto" src="img_mine/sc-1_button.jpg" alt="..." /></a>
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
 										<br><br>창원 - 두산위브를 촬영한 현장입니다. <br>
 										Script Cinema는 업체 측에서 공간에 대해 설명하고자 하는 내용이 많을 때, <br> 
@@ -712,7 +712,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-case">Magazine_1</h2>
                                     <p class="item-intro text-muted">After Effects</p>
-                                    <img class="img-fluid d-block mx-auto" src="img_mine/m-1_button.jpg" alt="..." />
+                                    <a href="https://youtube.com/shorts/2-5XTfXi_I4?feature=share"><img class="img-fluid d-block mx-auto" src="img_mine/m-1_button.jpg" alt="..." /></a>
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
 										<br><br>서울 강남 - 포스코트를 촬영한 현장입니다. <br>
 										사진 작업물을 position, scale, opacity 조절로 영상처럼 보이게 만들어 생동감을 주고, <br>
@@ -759,10 +759,10 @@
                                     <!-- Project details-->
                                     <h2 class="text-case">Cinema _2</h2>
                                     <p class="item-intro text-muted">Premier pro</p>
-                                    <img class="img-fluid d-block mx-auto" src="img_mine/c-kyungja_button.jpg" alt="..." />
+                                    <a href="https://youtu.be/OWlDE-IjNcw"><img class="img-fluid d-block mx-auto" src="img_mine/c-kyungja_button.jpg" alt="..." /></a>
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
 										<br><br> 서울 연남동 - 경자 미용실을 촬영한 현장으로 콜라보 로고 작업을 진행하였고,<br>
-										힙한 분위기에 어우러지도록 스케일을 조정하여 현장감이 느껴질 수 있게 했으며, 인물들을 사이사이에 배치하여<br> 
+										힙한 분위기에 어우러지도록 스케일을 조정하여 현장감이 느껴질 수 있게 했으며, 인물을 사이사이에 배치하여<br> 
 										스토리 구성 / 컷 편집 / 장면전환효과 / BGM 설정 / 수평수직 조정 / 톤 보정 / 플리커 현상 교정 등 편집을 통해 만든 시네마틱 영상입니다.</p> <br>
                                     <ul class="list-inline">
                                         <li>
@@ -805,7 +805,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Script cinema _2</h2>
                                     <p class="item-intro text-muted">Premier pro</p>
-                                    <img class="img-fluid d-block mx-auto" src="img_mine/sc-2_button.jpg" alt="..." />
+                                    <a href="https://youtu.be/vURyisx-KVk"><img class="img-fluid d-block mx-auto" src="img_mine/sc-2_button.jpg" alt="..." /></a>
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
 										<br><br>
 										화성 봉담 - 동화마을 동일하이빌을 촬영한 현장입니다. <br>
@@ -855,7 +855,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-case">Magazine _2</h2>
                                     <p class="item-intro text-muted">After Effects</p>
-                                    <img class="img-fluid d-block mx-auto" src="img_mine/m-2_button.jpg" alt="..." />
+                                    <a href="https://youtube.com/shorts/e0VMJncx2W4?feature=share"><img class="img-fluid d-block mx-auto" src="img_mine/m-2_button.jpg" alt="..." /></a>
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
 										<br><br> 송도 - 힐스테이트 더 스카이를 촬영한 현장입니다. <br>
 										사진 작업물을 position, scale, opacity 조절로 영상처럼 보이게 만들어 생동감을 주고, <br>
@@ -905,9 +905,9 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Cook Video</h2>
                                     <p class="item-intro text-muted">Premier pro</p>
-                                    <img class="img-fluid d-block mx-auto" src="img_mine/cook_button.jpg" alt="..." />
+                                    <a href="https://youtu.be/ynYTyYWvwqA"><img class="img-fluid d-block mx-auto" src="img_mine/cook_button.jpg" alt="..." /></a>
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
-										<br><br>집에서 직접 요리하여 촬영한 영상본을 편안하게 볼 수 있도록 <br>
+										<br><br>집에서 직접 요리하여 촬영한 영상본을 잔잔하게 볼 수 있도록 <br>
 										컷편집 / 톤 보정 / BGM 설정 / 효과음 설정 / 자막 작업 등으로 깔끔하게 만든 영상입니다.</p>
                                     <ul class="list-inline">
                                         <li>
@@ -950,10 +950,10 @@
                                     <!-- Project details-->
                                     <h2 class="text-case">Brand 'TAMBURINS'</h2>
                                     <p class="item-intro text-muted">After Effects</p>
-                                    <img class="img-fluid d-block mx-auto" src="img_mine/tamburins_button.jpg" alt="..." />
+                                    <a href="https://youtu.be/nM5KqW4mm9k"><img class="img-fluid d-block mx-auto" src="img_mine/tamburins2_button.jpg" alt="..." /></a>
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
 										<br><br>'탬버린즈'라는 브랜드에서 SHELL X 컬렉션이 출시되었을 때 만든 영상입니다. <br>
-										모델인 제니님의 사진을 배치하여 슬로건인 Awaken your senses 글자를 배치하고, <br> 제품들을 진열하여 제품들을 보여주었으며, <br>
+										모델인 제니님의 사진에 Awaken your senses 글자를 배치하여 슬로건을 나타내고, <br> BGM의 비트에 맞게 제품들을 진열하여 신제품들을 보여주었으며, <br>
 										stroke, glitch, lens flare, noise, wave warp, posterize time, cross dissolve 등의 효과를 사용하여<br>
 										향이 피어오름과 동시에 자유로움을 찾은 여자의 모습을 표현하였습니다. <br>
 		
@@ -999,9 +999,11 @@
                                     <!-- Project details-->
                                     <h2 class="text-case">Brand 'NIKE'</h2>
                                     <p class="item-intro text-muted">Premier Pro</p>
-                                    <img class="img-fluid d-block mx-auto" src="img_mine/nike_button.jpg" alt="..." />
+                                    <a href="https://youtu.be/9aiWYBfLaSU"><img class="img-fluid d-block mx-auto" src="img_mine/nike_button.jpg" alt="..." /></a>
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
-										<br><br>나이키라는 </p>
+										<br><br>
+										NIKE가 연상되는 단어들에 트랙매트를 씌워 scale 조정으로 리듬감을 나타냈고, <br>
+										그 리듬감에 맞춰 활동적인 운동 장면을 담아 브랜드의 이미지가 잘 나타날 수 있도록 한 영상입니다. </p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Running time:</strong>
@@ -1043,7 +1045,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-case">App '오늘의 집'</h2>
                                     <p class="item-intro text-muted">After Effects</p>
-                                    <img class="img-fluid d-block mx-auto" src="img_mine/app_button.jpg" alt="..." />
+                                    <a href="https://youtu.be/90nRx8_3o7o"><img class="img-fluid d-block mx-auto" src="img_mine/app_button.jpg" alt="..." /></a>
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
 										<br><br>학교 수료 중에 '앱 광고'라는 첫 주제로 과제를 수행하면서 만들었던 영상입니다. <br>
 									일러스트로 그림을 그려 CC particle world, tint, 3d camera, ratation, drop shadow, puppet pin, glow, color key, position, animate 등의 효과를 사용하여
@@ -1089,22 +1091,29 @@
                                     <!-- Project details-->
                                     <h2 class="text-case">AE reels</h2>
                                     <p class="item-intro text-muted">After Effects</p>
-                                    <img class="img-fluid d-block mx-auto" src="img_mine/nike.jpg" alt="..." />
+                                    <a href="https://youtu.be/Sdt_70uUGvU"><img class="img-fluid d-block mx-auto" src="img_mine/aereels_button.jpg" alt="..." /></a>
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
-										<br><br>교육을 들으면서 배웠던 기술들을 한데 모은 영상입니다.
-									여러 효과들을 사용하면서 에프터이펙트라는 프로그램을 익숙하게 만들 수 있었습니다.</p>
+										<br><br>교육을 들으면서 After Effects 프로그램으로 배웠던 기술들을 한데 모은 영상입니다. <br>
+									1) Particle <br>
+									2) Scroll animation <br>
+									3) Book animation <br>
+									4) Chroma key <br>
+									5) App advertisement <br>
+									6) Magnify <br>
+									7) Repe tile <br>
+									8) Stretch</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Running time:</strong>
-                                            16"
+                                            38"
                                         </li>
                                         <li>
                                             <strong>Plan:</strong>
-                                            Kim Hee Su
+                                            Teacher, Kim Hee Su
                                         </li>
 										 <li>
                                             <strong>Draw:</strong>
-                                            Kim Hee Su
+                                            Teacher , Kim Hee Su
                                         </li>
 										  <li>
                                             <strong>Edit:</strong>
