--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-case">Brand 'NIKE'</h2>
                                     <p class="item-intro text-muted">Premier Pro</p>
-                                    <a href="https://youtu.be/9aiWYBfLaSU"><img class="img-fluid d-block mx-auto" src="img_mine/nike_button.jpg" alt="..." /></a>
+                                    <a href="https://youtu.be/aD7xVPPxioc"><img class="img-fluid d-block mx-auto" src="img_mine/nike_button.jpg" alt="..." /></a>
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
 										<br><br>
 										NIKE가 연상되는 단어들에 트랙매트를 씌워 scale 조정으로 리듬감을 나타냈고, <br>
@@ -1007,7 +1007,7 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Running time:</strong>
-                                            16"
+                                            15"
                                         </li>
                                         <li>
                                             <strong>Plan:</strong>
