--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
 										<br><br> 서울 여의도 - 트럼프월드를 촬영한 현장입니다. <br>
 										공간을 편안한 무드로 영화처럼 이어서 볼 수 있도록 <br> 
-										스토리 구성 / 컷 편집 / 장면전환효과 / BGM 설정 / 수평수직 조정 / 톤 보정 / 플리커 현상 교정 등 편집을 통해 만든 시네마틱 영상입니다.</p>
+										스토리 구성 / 컷 편집 / 장면전환효과 / BGM 설정 / 수평수직 조정 / 톤 보정 / 흔들림 보정 / 플리커 현상 교정 등 편집을 통해 만든 시네마틱 영상입니다.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Running time:</strong>
@@ -763,7 +763,7 @@
                                     <p>* 이미지를 클릭하시면 영상 시청이 가능합니다
 										<br><br> 서울 연남동 - 경자 미용실을 촬영한 현장으로 콜라보 로고 작업을 진행하였고,<br>
 										힙한 분위기에 어우러지도록 스케일을 조정하여 현장감이 느껴질 수 있게 했으며, 인물을 사이사이에 배치하여<br> 
-										스토리 구성 / 컷 편집 / 장면전환효과 / BGM 설정 / 수평수직 조정 / 톤 보정 / 플리커 현상 교정 등 편집을 통해 만든 시네마틱 영상입니다.</p> <br>
+										스토리 구성 / 컷 편집 / 장면전환효과 / BGM 설정 / 수평수직 조정 / 톤 보정 / 흔들림 보정 / 플리커 현상 교정 등 편집을 통해 만든 시네마틱 영상입니다.</p> <br>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Running time:</strong>
